# praxis-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LICENSE  README.md  pyproject.toml
artifacts/: no-trade_BTCUSD_20260407_202119_468893.json  no-trade_BTCUSD_20260407_202307_792349.json  no-trade_BTCUSD_20260407_203034_528202.json  no-trade_BTCUSD_20260407_210452_734731.json  no-trade_BTCUSD_20260407_214944_280345.json  no-trade_BTCUSD_20260407_220100_643480.json  no-trade_BTCUSD_20260407_223032_305466.json  no-trade_BTCUSD_20260407_223105_251038.json  no-trade_BTCUSD_20260407_223129_885679.json  no-trade_BTCUSD_20260409_135547_096835.json  no-trade_BTCUSD_20260409_140036_307999.json  no-trade_BTCUSD_20260409_142438_635307.json  no-trade_BTCUSD_20260409_152530_381370.json  no-trade_BTCUSD_20260409_162619_548943.json  no-trade_BTCUSD_20260409_183747_161872.json  no-trade_BTCUSD_20260409_184118_074103.json  no-trade_BTCUSD_20260409_185616_605364.json  no-trade_BTCUSD_20260409_191205_319281.json  no-trade_BTCUSD_20260409_192716_753392.json  no-trade_BTCUSD_20260409_194305_458371.json  no-trade_BTCUSD_20260409_195853_744748.json  no-trade_BTCUSD_20260409_201440_739263.json  no-trade_BTCUSD_20260409_203028_725271.json  no-trade_BTCUSD_20260409_204618_005020.json  no-trade_BTCUSD_20260409_210206_263670.json  no-trade_BTCUSD_20260409_211752_555948.json  no-trade_BTCUSD_20260409_213341_712179.json  no-trade_BTCUSD_20260409_214929_597989.json  no-trade_BTCUSD_20260409_220529_636497.json  no-trade_BTCUSD_20260409_222118_663805.json  (+201 more)
(+174 files in other folders)
